# crossCompile

./: CMakeLists.txt  README.md  mingw.cmake
src/: main.cpp
